[gd_scene load_steps=3 format=3 uid="uid://gh5nb0plat7x"]

[ext_resource type="Script" uid="uid://djwkluxkflpqh" path="res://scripts/ui/SlabUI.gd" id="1_lmcr3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vdr7f"]
bg_color = Color(0.16470589, 0.16470589, 0.22745098, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.2901961, 0.2901961, 0.3529412, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 5
shadow_offset = Vector2(0, 4)

[node name="SlabUI" type="Control"]
custom_minimum_size = Vector2(100, 120)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_lmcr3")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vdr7f")

[node name="NumberLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 56
text = "7"

[node name="LetterLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 6.0
offset_top = 7.0
offset_right = 46.0
offset_bottom = 41.0
theme_override_colors/font_color = Color(0.5717404, 0.039445173, 0.21454614, 1)
theme_override_font_sizes/font_size = 24
text = "L"

[node name="Glow" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
